--- a/Manuxa/style.css
+++ b/Manuxa/style.css
@@ -1,5 +1,74 @@
 @charset "utf-8";
-/* CSS Document */
+
+/* Den blå kasse rundt i navigationsbaren*/
 .menu {
-font: "Alte haas";
+background: #4096B6;
+padding-bottom: 2%;
+padding-top:2%;
+	
+}
+
+/* Selve linksne i navigationsbaren - mangler fonten "Alte haas" */
+
+a {	
+color: white;
+text-decoration: none;
+margin-right: 1%;
+margin-left: 5%;
+padding-left: 5%;		
+}
+
+/*Farveskift når man hover over links i navigationsbaren */
+a:hover {
+color: black;
+padding-bottom: 2%;
+padding-top:2%;	
+}
+
+/* Logo i venstre hjørne*/
+img {
+width: 20%;
+height: 20%;
+	
+}
+
+/* Knapperne i højre hjørne*/
+.knapper {
+	width: 15%;
+	margin-left: 90%;
+	margin-top: -52px;
+}
+
+/* Overskrifter*/
+
+h1{
+text-align: center;
+margin-top: 5%;	
+}
+
+/* Brødtekst*/
+
+p{
+text-align: center;
+font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";	
+}
+
+/* Footeren sam teksten i den*/
+
+footer{
+background: #4096B6;
+padding-bottom: 2%;
+padding-top:2%;	
+}
+
+.footertext{
+color: white;
+text-align: left;	
+}
+
+.paalaeg {
+align-content: center;
+height: 40%;
+width: 40%;
+	
 }
