--- a/Manuxa/style.css
+++ b/Manuxa/style.css
@@ -1,4 +1,11 @@
 @charset "utf-8";
+/*Body og html regler*/
+body,html {
+	height:100%;
+	width: 1366px;
+	margin: 0 auto;
+	display: inline-block
+}
 
 /* Den blå kasse rundt i navigationsbaren*/
 .menu {
@@ -14,7 +21,7 @@ a {
 color: white;
 text-decoration: none;
 margin-right: 1%;
-margin-left: 5%;
+margin-left: 2%;
 padding-left: 5%;		
 }
 
@@ -26,17 +33,21 @@ padding-top:2%;
 }
 
 /* Logo i venstre hjørne*/
-img {
+#logo {
 width: 20%;
 height: 20%;
 	
 }
 
+	
+
+
 /* Knapperne i højre hjørne*/
 .knapper {
 	width: 15%;
+	height: 10%;
 	margin-left: 90%;
-	margin-top: -52px;
+	margin-top: -40px;
 }
 
 /* Overskrifter*/
@@ -53,22 +64,4 @@ text-align: center;
 font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";	
 }
 
-/* Footeren sam teksten i den*/
 
-footer{
-background: #4096B6;
-padding-bottom: 2%;
-padding-top:2%;	
-}
-
-.footertext{
-color: white;
-text-align: left;	
-}
-
-.paalaeg {
-align-content: center;
-height: 40%;
-width: 40%;
-	
-}
