--- a/Manuxa/style.css
+++ b/Manuxa/style.css
@@ -234,3 +234,42 @@ font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
 	background: #4096B6;
 	height: 100px;
 	}
+
+/*Kontaktformular*/
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+
+}
+
+input[type=submit] {
+	background-color: #4096B6;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	display: block;
+	margin: auto;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.container {
+    border-radius: 5px;
+    padding: 20px;
+}
+/*brødtekst til siden*/
+.broedtekst {
+	font-weight: 400;
+	margin-left: 40px;
+	margin-right: 40px;
+}
